generation v9 break working well still minor fixes to do application.properties in dev stage rn not for deployment